--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<h1>Test!</h1>
+<html>
+    <head>
+        <title>Daniel Shaw - GitHub</title>
+        <meta name="author" content="Daniel Shaw">
+        <meta name="date" content="D27/M1/Y2016">
+    </head>
+    <body>
+        <p>TODO: Update with descriptions for all modern repos...</p>
+        <hr />
+    </body>
+</html>
