Updates! Updates everywhere!

--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <html>
     <head>
         <title>Daniel Shaw - GitHub</title>
+        <link href="styles.css" type="text/css" rel="stylesheet">
         <meta name="author" content="Daniel Shaw">
         <meta name="date" content="D27/M1/Y2016">
     </head>
     <body>
-        <p>TODO: Update with descriptions for all modern repos...</p>
-        <hr />
+        <div class="links">
+            <ul>
+                <li><span class="link">DWTK</span></li>
+                <li><span class="link">AP Computer Science</span></li>
+            </ul>
+        </div>
     </body>
 </html>
