--- a/index.html
+++ b/index.html
@@ -2,15 +2,18 @@
     <head>
         <title>Daniel Shaw - GitHub</title>
         <link href="styles.css" type="text/css" rel="stylesheet">
+        <script src="script.js" type="text/javascript"></script>
         <meta name="author" content="Daniel Shaw">
         <meta name="date" content="D27/M1/Y2016">
     </head>
     <body>
         <div class="links">
             <ul>
-                <li><span class="link">DWTK</span></li>
-                <li><span class="link">AP Computer Science</span></li>
+                <li><span onclick="onLink('dwtk');" class="link">DWTK</span></li>
+                <li><span onclick="onLink('computer science');" class="link">AP Computer Science</span></li>
             </ul>
+        </div>
+        <div class="viewer" id="view">
         </div>
     </body>
 </html>
