--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
     <head>
+        <!-- 
+        Big thanks to this website! https://brajeshwar.github.io/entities/
+        -->
         <title>Daniel Shaw - GitHub</title>
         <link href="styles.css" type="text/css" rel="stylesheet">
         <script src="script.js" type="text/javascript"></script>
