Started implementing pages

--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
         <div class="links">
             <ul>
                 <li><span onclick="onLink('dwtk');" class="link">DWTK</span></li>
-                <li><span onclick="onLink('computer science');" class="link">AP Computer Science</span></li>
+                <li><span onclick="onLink('compsci');" class="link">AP Computer Science</span></li>
             </ul>
         </div>
-        <div class="viewer" id="view">
+        <div class="viewer">
+            <object type="text/html" id="view">
+            </object>
         </div>
     </body>
 </html>
