Working on DWTK page

--- a/repos/dwtk.html
+++ b/repos/dwtk.html
@@ -8,7 +8,15 @@
         <h1>DWTK</h1>
         <hr />
         <p>
-            
+            DWTK is a toolkit that provides a set of widgets (buttons, textboxes, listboxes, and more..) to the developer. With this toolkit,
+            the developer no longer needs write all of the widgets from scratch.
+            <br />
+            DWTK provides an event API for all widgets (with the exception of the built in label) so that advanced applications can be implemented
+            in minimal time. 
+            <br />
+            If the developer needs a custom widget that is not provided by default, a new widget can be created that works like all the others.
+            <br />
+            DWTK uses <span class="code">java.awt.{Canvas, Graphics}</span> and can be used on top of a current application.
         </p>
     </body>
 </html>
