Minor UI change, fixed loading pages

--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
         <meta name="date" content="D27/M1/Y2016">
     </head>
     <body>
+        <div class="viewer" id="view">
+            <object type="text/html" data="initial.html">
+            </object>
+        </div>
         <div class="links">
             <ul>
                 <li><span onclick="onLink('dwtk');" class="link">DWTK</span></li>
                 <li><span onclick="onLink('compsci');" class="link">AP Computer Science</span></li>
             </ul>
-        </div>
-        <div class="viewer">
-            <object type="text/html" id="view">
-            </object>
         </div>
     </body>
 </html>
