Updated page, added about

--- a/index.html
+++ b/index.html
@@ -14,11 +14,67 @@
             <object type="text/html" data="initial.html">
             </object>
         </div>
-        <div class="links">
-            <ul>
-                <li><span onclick="onLink('dwtk');" class="link">DWTK</span></li>
-                <li><span onclick="onLink('compsci');" class="link">AP Computer Science</span></li>
-            </ul>
+        <div class="container">
+            <div class="about">
+                <span>TODO: About</span>
+            </div>
+            <div class="links">
+                <ul>
+                    <!--
+                    Using all these links to test stuff
+                    -->
+                    <li><span onclick="onLink('dwtk');" class="link">DWTK</span></li>
+                    <li><span onclick="onLink('compsci');" class="link">AP Computer Science</span></li>
+                    <li><span onclick="onLink('dwtk');" class="link">DWTK</span></li>
+                    <li><span onclick="onLink('dwtk');" class="link">DWTK</span></li>
+                    <li><span onclick="onLink('dwtk');" class="link">DWTK</span></li>
+                    <li><span onclick="onLink('dwtk');" class="link">DWTK</span></li>
+                    <li><span onclick="onLink('dwtk');" class="link">DWTK</span></li>
+                    <li><span onclick="onLink('dwtk');" class="link">DWTK</span></li>
+                    <li><span onclick="onLink('dwtk');" class="link">DWTK</span></li>
+                    <li><span onclick="onLink('dwtk');" class="link">DWTK</span></li>
+                    <li><span onclick="onLink('dwtk');" class="link">DWTK</span></li>
+                    <li><span onclick="onLink('dwtk');" class="link">DWTK</span></li>
+                    <li><span onclick="onLink('dwtk');" class="link">DWTK</span></li>
+                    <li><span onclick="onLink('dwtk');" class="link">DWTK</span></li>
+                    <li><span onclick="onLink('dwtk');" class="link">DWTK</span></li>
+                    <li><span onclick="onLink('dwtk');" class="link">DWTK</span></li>
+                    <li><span onclick="onLink('dwtk');" class="link">DWTK</span></li>
+                    <li><span onclick="onLink('dwtk');" class="link">DWTK</span></li>
+                    <li><span onclick="onLink('dwtk');" class="link">DWTK</span></li>
+                    <li><span onclick="onLink('dwtk');" class="link">DWTK</span></li>
+                    <li><span onclick="onLink('dwtk');" class="link">DWTK</span></li>
+                    <li><span onclick="onLink('dwtk');" class="link">DWTK</span></li>
+                    <li><span onclick="onLink('dwtk');" class="link">DWTK</span></li>
+                    <li><span onclick="onLink('dwtk');" class="link">DWTK</span></li>
+                    <li><span onclick="onLink('dwtk');" class="link">DWTK</span></li>
+                    <li><span onclick="onLink('dwtk');" class="link">DWTK</span></li>
+                    <li><span onclick="onLink('compsci');" class="link">AP Computer Science</span></li>
+                    <li><span onclick="onLink('compsci');" class="link">AP Computer Science</span></li>
+                    <li><span onclick="onLink('compsci');" class="link">AP Computer Science</span></li>
+                    <li><span onclick="onLink('compsci');" class="link">AP Computer Science</span></li>
+                    <li><span onclick="onLink('compsci');" class="link">AP Computer Science</span></li>
+                    <li><span onclick="onLink('compsci');" class="link">AP Computer Science</span></li>
+                    <li><span onclick="onLink('compsci');" class="link">AP Computer Science</span></li>
+                    <li><span onclick="onLink('compsci');" class="link">AP Computer Science</span></li>
+                    <li><span onclick="onLink('compsci');" class="link">AP Computer Science</span></li>
+                    <li><span onclick="onLink('compsci');" class="link">AP Computer Science</span></li>
+                    <li><span onclick="onLink('compsci');" class="link">AP Computer Science</span></li>
+                    <li><span onclick="onLink('compsci');" class="link">AP Computer Science</span></li>
+                    <li><span onclick="onLink('compsci');" class="link">AP Computer Science</span></li>
+                    <li><span onclick="onLink('compsci');" class="link">AP Computer Science</span></li>
+                    <li><span onclick="onLink('compsci');" class="link">AP Computer Science</span></li>
+                    <li><span onclick="onLink('compsci');" class="link">AP Computer Science</span></li>
+                    <li><span onclick="onLink('compsci');" class="link">AP Computer Science</span></li>
+                    <li><span onclick="onLink('compsci');" class="link">AP Computer Science</span></li>
+                    <li><span onclick="onLink('compsci');" class="link">AP Computer Science</span></li>
+                    <li><span onclick="onLink('compsci');" class="link">AP Computer Science</span></li>
+                    <li><span onclick="onLink('compsci');" class="link">AP Computer Science</span></li>
+                    <li><span onclick="onLink('compsci');" class="link">AP Computer Science</span></li>
+                    <li><span onclick="onLink('compsci');" class="link">AP Computer Science</span></li>
+                    <li><span onclick="onLink('compsci');" class="link">AP Computer Science</span></li>
+                </ul>
+            </div>
         </div>
     </body>
 </html>
