Working on about

--- a/index.html
+++ b/index.html
@@ -16,62 +16,11 @@
         </div>
         <div class="container">
             <div class="about">
-                <span>TODO: About</span>
+                <a href="http://das.x10.bz/" target="_blank">Personal website</a>
             </div>
             <div class="links">
                 <ul>
-                    <!--
-                    Using all these links to test stuff
-                    -->
                     <li><span onclick="onLink('dwtk');" class="link">DWTK</span></li>
-                    <li><span onclick="onLink('compsci');" class="link">AP Computer Science</span></li>
-                    <li><span onclick="onLink('dwtk');" class="link">DWTK</span></li>
-                    <li><span onclick="onLink('dwtk');" class="link">DWTK</span></li>
-                    <li><span onclick="onLink('dwtk');" class="link">DWTK</span></li>
-                    <li><span onclick="onLink('dwtk');" class="link">DWTK</span></li>
-                    <li><span onclick="onLink('dwtk');" class="link">DWTK</span></li>
-                    <li><span onclick="onLink('dwtk');" class="link">DWTK</span></li>
-                    <li><span onclick="onLink('dwtk');" class="link">DWTK</span></li>
-                    <li><span onclick="onLink('dwtk');" class="link">DWTK</span></li>
-                    <li><span onclick="onLink('dwtk');" class="link">DWTK</span></li>
-                    <li><span onclick="onLink('dwtk');" class="link">DWTK</span></li>
-                    <li><span onclick="onLink('dwtk');" class="link">DWTK</span></li>
-                    <li><span onclick="onLink('dwtk');" class="link">DWTK</span></li>
-                    <li><span onclick="onLink('dwtk');" class="link">DWTK</span></li>
-                    <li><span onclick="onLink('dwtk');" class="link">DWTK</span></li>
-                    <li><span onclick="onLink('dwtk');" class="link">DWTK</span></li>
-                    <li><span onclick="onLink('dwtk');" class="link">DWTK</span></li>
-                    <li><span onclick="onLink('dwtk');" class="link">DWTK</span></li>
-                    <li><span onclick="onLink('dwtk');" class="link">DWTK</span></li>
-                    <li><span onclick="onLink('dwtk');" class="link">DWTK</span></li>
-                    <li><span onclick="onLink('dwtk');" class="link">DWTK</span></li>
-                    <li><span onclick="onLink('dwtk');" class="link">DWTK</span></li>
-                    <li><span onclick="onLink('dwtk');" class="link">DWTK</span></li>
-                    <li><span onclick="onLink('dwtk');" class="link">DWTK</span></li>
-                    <li><span onclick="onLink('dwtk');" class="link">DWTK</span></li>
-                    <li><span onclick="onLink('compsci');" class="link">AP Computer Science</span></li>
-                    <li><span onclick="onLink('compsci');" class="link">AP Computer Science</span></li>
-                    <li><span onclick="onLink('compsci');" class="link">AP Computer Science</span></li>
-                    <li><span onclick="onLink('compsci');" class="link">AP Computer Science</span></li>
-                    <li><span onclick="onLink('compsci');" class="link">AP Computer Science</span></li>
-                    <li><span onclick="onLink('compsci');" class="link">AP Computer Science</span></li>
-                    <li><span onclick="onLink('compsci');" class="link">AP Computer Science</span></li>
-                    <li><span onclick="onLink('compsci');" class="link">AP Computer Science</span></li>
-                    <li><span onclick="onLink('compsci');" class="link">AP Computer Science</span></li>
-                    <li><span onclick="onLink('compsci');" class="link">AP Computer Science</span></li>
-                    <li><span onclick="onLink('compsci');" class="link">AP Computer Science</span></li>
-                    <li><span onclick="onLink('compsci');" class="link">AP Computer Science</span></li>
-                    <li><span onclick="onLink('compsci');" class="link">AP Computer Science</span></li>
-                    <li><span onclick="onLink('compsci');" class="link">AP Computer Science</span></li>
-                    <li><span onclick="onLink('compsci');" class="link">AP Computer Science</span></li>
-                    <li><span onclick="onLink('compsci');" class="link">AP Computer Science</span></li>
-                    <li><span onclick="onLink('compsci');" class="link">AP Computer Science</span></li>
-                    <li><span onclick="onLink('compsci');" class="link">AP Computer Science</span></li>
-                    <li><span onclick="onLink('compsci');" class="link">AP Computer Science</span></li>
-                    <li><span onclick="onLink('compsci');" class="link">AP Computer Science</span></li>
-                    <li><span onclick="onLink('compsci');" class="link">AP Computer Science</span></li>
-                    <li><span onclick="onLink('compsci');" class="link">AP Computer Science</span></li>
-                    <li><span onclick="onLink('compsci');" class="link">AP Computer Science</span></li>
                     <li><span onclick="onLink('compsci');" class="link">AP Computer Science</span></li>
                 </ul>
             </div>
