--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         -->
         <title>Daniel Shaw - GitHub</title>
         <link href="styles.css" type="text/css" rel="stylesheet">
+        <link rel="icon" type="image/png" href="/favicon.png">
         <script src="script.js" type="text/javascript"></script>
         <meta name="author" content="Daniel Shaw">
         <meta name="date" content="D27/M1/Y2016">
