Remove link to old website

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
         <div class="container">
             <div class="about">
-                <a href="http://das.x10.bz/" target="_blank">Personal website</a>
+                <a href="https://github.com/dashaw92" target="_blank">My github</a>
             </div>
             <div class="links">
                 <ul>
